--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <title>My Portfolio</title>
     <base href="">
-    <link rel="icon" href="check-mark.png">
+    <link rel="icon" href="assets/resources/images/title_logo.png">
     <link rel="stylesheet" href="assets/resources/css/normalize.css">
     <link rel="stylesheet" href="assets/resources/icons/fontawesome-free-6.4.2-web/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -677,7 +677,7 @@
         body>header>section:first-child>nav>a>button:hover {
             color: black;
             background: white;
-            border: 3px solid #858585;
+            cursor: url(assets/resources/images/circle.png), pointer;
         }
 
         body>header>section:nth-child(2) {
@@ -835,7 +835,7 @@
         #home>section>section>nav>a>button:hover {
             color: black;
             background: white;
-            border: 3px solid #858585;
+            cursor: url(assets/resources/images/circle.png), pointer;
         }
 
         /* about me */
@@ -969,7 +969,7 @@
         #about_me>section>section>nav>a>button:hover {
             color: black;
             background: white;
-            border: 3px solid #858585;
+            cursor: url(assets/resources/images/circle.png), pointer;
         }
 
         #about_me>section {
@@ -1296,6 +1296,7 @@
             background-color: rgb(14, 14, 23);
             transition-duration: 1s;
             transition-property: background-color;
+            cursor: url(assets/resources/images/crosshair24.png), pointer;
         }
 
         #my_projects>section>a:nth-child(4)>section:hover p {
@@ -1446,6 +1447,7 @@
             background-color: rgb(14, 14, 23);
             transition-duration: 1s;
             transition-property: background-color;
+            cursor: url(assets/resources/images/crosshair24.png), pointer;
         }
 
         #my_assignments>section>a:nth-child(4)>section:hover p {
@@ -4537,7 +4539,7 @@
                 </section>
                 <a href="https://github.com/duvindu111?tab=repositories" target="_blank">
                     <section>
-                        <p>Check Out My Other Projects</p>
+                        <p>Check Out My Projects</p>
                     </section>
                 </a>
             </section>
@@ -4602,7 +4604,7 @@
                 </section>
                 <a href="pages/assignments.html" target="_blank">
                     <section>
-                        <p>Check Out All The Assignments</p>
+                        <p>Check Out All Assignments</p>
                     </section>
                 </a>
             </section>
