nav added to the footer

--- a/index.html
+++ b/index.html
@@ -229,12 +229,15 @@
                 top: calc(100% - 40px);
                 left: 30%;
             }
+
             80% {
                 text-shadow: 0 0 2px #9170a2;
             }
+
             81% {
                 text-shadow: 0 0 2px #0291ff39, 2px 2px 10px #0291ffb9;
             }
+
             82% {
                 text-shadow: 0 0 2px #9170a2;
             }
@@ -536,9 +539,11 @@
             0% {
                 top: calc(90px + 5%);
             }
+
             90% {
-                text-shadow: 0 0 2px #9170a2; 
+                text-shadow: 0 0 2px #9170a2;
             }
+
             100% {
                 top: calc(50% - 40px);
                 text-shadow: 0 0 2px #0291ff39, 2px 2px 10px #0291ffb9;
@@ -549,9 +554,11 @@
             0% {
                 top: 90px;
             }
-            90%{
+
+            90% {
                 text-shadow: 0 0 2px #9170a2;
             }
+
             100% {
                 top: calc(60% - 40px);
                 text-shadow: 0 0 2px #0291ff39, 2px 2px 10px #0291ffb9;
@@ -563,9 +570,11 @@
                 top: calc(50% - 40px);
                 left: 50px;
             }
+
             90% {
                 text-shadow: 0 0 2px #9170a2;
             }
+
             100% {
                 top: calc(100% - 40px);
                 left: 50px;
@@ -578,15 +587,19 @@
                 top: calc(70% - 40px);
                 left: calc(100% - 220px);
             }
-            40%{
-                text-shadow: 0 0 2px #9170a2; 
+
+            40% {
+                text-shadow: 0 0 2px #9170a2;
             }
+
             45% {
-                text-shadow: 0 0 2px #0291ff39, 2px 2px 10px #0291ffb9; 
+                text-shadow: 0 0 2px #0291ff39, 2px 2px 10px #0291ffb9;
             }
+
             50% {
-                text-shadow: 0 0 2px #9170a2; 
+                text-shadow: 0 0 2px #9170a2;
             }
+
             100% {
                 top: calc(100% - 40px);
                 left: calc(100% - 220px);
@@ -615,9 +628,11 @@
                 top: 150px;
                 left: calc(20% - 150px);
             }
-            95%{
+
+            95% {
                 text-shadow: 0 0 2px #9170a2;
             }
+
             100% {
                 top: 150px;
                 left: calc(80% - 150px);
@@ -654,9 +669,11 @@
                 top: calc(40% - 40px);
                 left: calc(10% - 150px);
             }
-            90%{
+
+            90% {
                 text-shadow: 0 0 2px #9170a2;
             }
+
             100% {
                 top: calc(80% - 40px);
                 left: calc(40% - 150px);
@@ -801,24 +818,26 @@
             color: white;
         }
 
-        #home_th{
-           animation-name: home_th_glow;
-           animation-duration: 4s;
-           animation-iteration-count: infinite;
-           animation-direction:alternate;
-           animation-timing-function: linear;
+        #home_th {
+            animation-name: home_th_glow;
+            animation-duration: 4s;
+            animation-iteration-count: infinite;
+            animation-direction: alternate;
+            animation-timing-function: linear;
         }
 
-        @keyframes home_th_glow{
+        @keyframes home_th_glow {
             0% {
-    text-shadow: none;
-  }
-  70%{
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
-  }
-  100% {
-    text-shadow: 0 0 5px rgba(255, 255, 255, 0.9), 0 0 50px rgba(255, 255, 255, 0.7), 0 0 40px rgba(255, 255, 255, 0.5);
-  }
+                text-shadow: none;
+            }
+
+            70% {
+                text-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
+            }
+
+            100% {
+                text-shadow: 0 0 5px rgba(255, 255, 255, 0.9), 0 0 50px rgba(255, 255, 255, 0.7), 0 0 40px rgba(255, 255, 255, 0.5);
+            }
         }
 
         #home>section>section>hgroup>h4 {
@@ -863,32 +882,36 @@
             height: 35px;
             width: 160px;
             animation-name: home_btn_position;
-            animation-duration:4s;
-            animation-iteration-count:infinite;
+            animation-duration: 4s;
+            animation-iteration-count: infinite;
             animation-timing-function: linear;
             /* animation-direction: alternate; */
         }
 
-        @keyframes home_btn_position{
-            0%{
-                left:0;
-                right:0;
+        @keyframes home_btn_position {
+            0% {
+                left: 0;
+                right: 0;
             }
-            25%{
-                left:10%;
-                right:0;
+
+            25% {
+                left: 10%;
+                right: 0;
             }
-            50%{
-                left:0;
-                right:0;
+
+            50% {
+                left: 0;
+                right: 0;
             }
-            75%{
-                left:0;
+
+            75% {
+                left: 0;
                 right: 10%;
             }
-            100%{
-                left:0;
-                right:0;
+
+            100% {
+                left: 0;
+                right: 0;
             }
         }
 
@@ -959,25 +982,27 @@
             color: white;
         }
 
-        #about_th{
-            animation-name:about_th_glow;
+        #about_th {
+            animation-name: about_th_glow;
             animation-duration: 4s;
             animation-direction: alternate;
-            animation-iteration-count:infinite;
+            animation-iteration-count: infinite;
             animation-timing-function: linear;
         }
 
-        @keyframes about_th_glow{
+        @keyframes about_th_glow {
             0% {
-    text-shadow: none;
-  }
-  70%{
-    text-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
-  }
-  100% {
-    text-shadow: 0 0 30px rgba(255, 255, 255, 0.9), 0 0 80px rgba(255, 255, 255, 0.7), 0 0 40px rgba(255, 255, 255, 0.5);
-  }
-}
+                text-shadow: none;
+            }
+
+            70% {
+                text-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
+            }
+
+            100% {
+                text-shadow: 0 0 30px rgba(255, 255, 255, 0.9), 0 0 80px rgba(255, 255, 255, 0.7), 0 0 40px rgba(255, 255, 255, 0.5);
+            }
+        }
 
         #about_me>section>section>hgroup>h4 {
             position: absolute;
@@ -1914,25 +1939,27 @@
             color: #EB4A4C;
         }
 
-        .red_first_letter{
-            animation-name:red_first_glow;
+        .red_first_letter {
+            animation-name: red_first_glow;
             animation-duration: 4s;
             animation-direction: alternate;
-            animation-iteration-count:infinite;
+            animation-iteration-count: infinite;
             animation-timing-function: linear;
         }
 
-        @keyframes red_first_glow{
+        @keyframes red_first_glow {
             0% {
-    text-shadow: none;
-  }
-  50%{
-    text-shadow: 0 0 0px #EB4A4C;
-  }
-  100% {
-    text-shadow: 2px 2px 30px #ff0004, 0px 0px 30px #ff0004, 10px 10px 30px #ff0004;
-  }
-}
+                text-shadow: none;
+            }
+
+            50% {
+                text-shadow: 0 0 0px #EB4A4C;
+            }
+
+            100% {
+                text-shadow: 2px 2px 30px #ff0004, 0px 0px 30px #ff0004, 10px 10px 30px #ff0004;
+            }
+        }
 
         body>main>section>section>hr {
             animation-name: hr_width;
@@ -1977,6 +2004,10 @@
             height: 100%;
             justify-content: center;
             /* background-color: red; */
+        }
+
+        body>footer>nav {
+            display: none;
         }
 
         .sub_section {
@@ -2081,7 +2112,7 @@
                 font-size: 10px;
                 text-shadow: none;
             }
-            
+
             /* header  */
             body>header>section:nth-child(2)>nav {
                 display: none;
@@ -3558,32 +3589,32 @@
             }
 
             body>header>section:nth-child(2)>h3 {
-                display:none;
+                display: none;
             }
 
             body>header>section:nth-child(2)>div:nth-child(3)>i {
-   display:none;
-}
+                display: none;
+            }
 
-body>header>section:nth-child(2)>nav>menu {
-    padding:0;
-    margin:auto;
-    top:0;
-    bottom:0;
-}
+            body>header>section:nth-child(2)>nav>menu {
+                padding: 0;
+                margin: auto;
+                top: 0;
+                bottom: 0;
+            }
 
-body>header>section:nth-child(2)>nav {
-    width:max-content;
-    position: absolute;
-    margin:auto;
-    top: 0px;
-    bottom:0;
-    right: 0;
-    left: 0;
-    font-size:1.6vw;
-    display: flex;
-    align-items: center;
-}
+            body>header>section:nth-child(2)>nav {
+                width: max-content;
+                position: absolute;
+                margin: auto;
+                top: 0px;
+                bottom: 0;
+                right: 0;
+                left: 0;
+                font-size: 1.6vw;
+                display: flex;
+                align-items: center;
+            }
 
             body>header>section:nth-child(2)>div:nth-child(3) {
                 visibility: visible;
@@ -4026,18 +4057,8 @@ body>header>section:nth-child(2)>nav {
                 width: 55px;
             }
 
-            #skills>section>section:nth-child(3)>div>figure:hover img {
-                border: 5px solid white;
-                width: 58px;
-                border: 3px solid white;
-            }
-
             #skills>section>section:nth-child(3)>div>figure>figcaption {
                 font-size: 1.2vw;
-            }
-
-            #skills>section>section:nth-child(3)>div>figure:hover figcaption {
-                font-size: 1.3vw;
             }
 
             #skills>section>section:nth-child(4)>div>p {
@@ -4177,6 +4198,53 @@ body>header>section:nth-child(2)>nav {
             #get_in_touch>section>section:nth-child(6) {
                 top: 590px;
             }
+
+            body>footer {
+                height: 150px;
+            }
+
+            body>footer>div {
+                height: 50%;
+                top: 50%
+            }
+
+            body>footer>nav {
+                height: 50%;
+                display: inline-block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+            }
+
+            body>footer>nav>menu {
+                list-style: none;
+                padding: 0;
+                top: 25px;
+                position: relative;
+            }
+
+            body>footer>nav>menu>li>a {
+                text-decoration: none;
+                color: white;
+                transition-duration: 0.2s;
+                transition-property: color;
+            }
+
+            body>footer>nav>menu>li {
+                display: inline-block;
+                padding-right: 20px;
+            }
+
+            body>footer>nav>menu>li:last-of-type {
+                padding-right: 0px;
+            }
+
+            body>footer>nav>menu>li>a:hover {
+                transition-duration: 0.2s;
+                transition-property: color;
+                color: #EB4A4C;
+            }
         }
 
         /* 1024 - 1440 */
@@ -4257,6 +4325,103 @@ body>header>section:nth-child(2)>nav {
 
             #get_in_touch>section>section:nth-child(6) {
                 top: 610px;
+            }
+
+            body>footer {
+                height: 150px;
+            }
+
+            body>footer>div {
+                height: 50%;
+                top: 50%
+            }
+
+            body>footer>nav {
+                height: 50%;
+                display: inline-block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+            }
+
+            body>footer>nav>menu {
+                list-style: none;
+                padding: 0;
+                top: 25px;
+                position: relative;
+            }
+
+            body>footer>nav>menu>li>a {
+                text-decoration: none;
+                color: white;
+                transition-duration: 0.2s;
+                transition-property: color;
+            }
+
+            body>footer>nav>menu>li {
+                display: inline-block;
+                padding-right: 20px;
+            }
+
+            body>footer>nav>menu>li:last-of-type {
+                padding-right: 0px;
+            }
+
+            body>footer>nav>menu>li>a:hover {
+                transition-duration: 0.2s;
+                transition-property: color;
+                color: #EB4A4C;
+            }
+
+        }
+
+        @media all and (min-width:1440px) {
+            body>footer {
+                height: 150px;
+            }
+
+            body>footer>div {
+                height: 50%;
+                top: 50%
+            }
+
+            body>footer>nav {
+                height: 50%;
+                display: inline-block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+            }
+
+            body>footer>nav>menu {
+                list-style: none;
+                padding: 0;
+                top: 25px;
+                position: relative;
+            }
+
+            body>footer>nav>menu>li>a {
+                text-decoration: none;
+                color: white;
+                transition-duration: 0.2s;
+                transition-property: color;
+            }
+
+            body>footer>nav>menu>li {
+                display: inline-block;
+                padding-right: 20px;
+            }
+
+            body>footer>nav>menu>li:last-of-type {
+                padding-right: 0px;
+            }
+
+            body>footer>nav>menu>li>a:hover {
+                transition-duration: 0.2s;
+                transition-property: color;
+                color: #EB4A4C;
             }
 
         }
@@ -4646,7 +4811,8 @@ body>header>section:nth-child(2)>nav {
         <!-- My Educational Qualifications -->
         <section id="my_edu_quali" class="page_sec">
             <section class="sub_section">
-                <h2>My <span class="highlight_red"><span class="red_first_letter">E</span>ducational <span class="red_first_letter">Q</span>ualifications</span></h2>
+                <h2>My <span class="highlight_red"><span class="red_first_letter">E</span>ducational <span
+                            class="red_first_letter">Q</span>ualifications</span></h2>
                 <hr>
                 <section>
                     <div>
@@ -4781,6 +4947,16 @@ body>header>section:nth-child(2)>nav {
     </main>
 
     <footer>
+        <nav>
+            <menu>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about_me">About</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#my_projects">My Works</a></li>
+                <li><a href="#my_edu_quali">Education</a></li>
+                <li><a href="#get_in_touch">Contact</a></li>
+            </menu>
+        </nav>
         <div>
             <small>Designed and developed by Duvindu Thathsara<br>
                 Copyright © 2023 - Duvindu Thathsara All Rights Reserved</small>
